Fix avatar alignment.

--- a/scss/mixins/_org.scss
+++ b/scss/mixins/_org.scss
@@ -1,5 +1,7 @@
 @mixin oc-letter($max_logo_height) {
   position: relative;
+  width: #{$max_logo_height}px;
+  height: #{$max_logo_height}px;
 
   &:before {
     content: attr(data-letter);
